--- a/src/app/components/App.scss
+++ b/src/app/components/App.scss
@@ -14,7 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background: url('../../assets/images/login-background.png') no-repeat center center fixed; 
+  background-size: cover;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
