--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,5 +1,5 @@
-$dark-color: #102434;
-$dark-color-opacity: #10243499;
+$dark-color: #050C11;
+$dark-color-opacity: #050C1199;
 $light-color: #F5F5F5;
 $yellow: #FCA406;
 $pink: #F43C5C;
