--- a/src/app/components/App.scss
+++ b/src/app/components/App.scss
@@ -1,15 +1,5 @@
 .img-background {
-    background: url('../../assets/images/login-background.png') no-repeat center center fixed; 
+    background: url('../../assets/images/login-background.png') no-repeat center center; 
     background-size: cover;
     min-height: 100vh;
-}
-
-section {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 400px;
-    padding-top: 100px;
-    background: #3c31dd;
 }
