--- a/src/app/pages/Landing/Landing.scss
+++ b/src/app/pages/Landing/Landing.scss
@@ -7,13 +7,6 @@
     z-index: 1;
 }
 
-.wave {
-    background: url('../../../assets/svgs/wave.svg') no-repeat center center fixed;
-    background-size: cover;
-    width: 100vw;
-    height: 300px;
-}
-
 .landing-logo {
     position: absolute;
     bottom: 1rem;
@@ -53,6 +46,12 @@
         height: 25%;
         width: 25%;
     }
+
+    .dark {
+        background: linear-gradient(180deg, rgba(5, 12, 17, 0) 0%, rgba(5, 12, 17, 0.9) 47.92%, #050C11 100%);
+        width: 100%;
+        height: 132px;
+    }
 }
 
 @media (max-width: 1366px) {
@@ -66,12 +65,11 @@
     }
 }
 
-.cell {
-    transform: rotate(-22deg);
-    z-index: 2;
-}
-
 .graphic {
     transform: rotate(-30deg);
-    z-index: 1;
+}
+
+body {
+    background: #050C11;
+    mix-blend-mode: normal;
 }
