--- a/src/index.scss
+++ b/src/index.scss
@@ -10,12 +10,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #050C11;
+  background: url("./assets/svgs/food-background.svg") repeat center center;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+main {
+  min-height: 100vh;
 }
 
 a:hover {
