--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,6 +1,4 @@
-$dark-color: #050C11;
-$dark-color-opacity: #050C1199;
-$light-color: #F5F5F5;
-$yellow: #FCA406;
-$pink: #F43C5C;
-$gray: #666666;
+$color-dark-blue: #102434;
+$color-dark: #050C11;
+$color-dark-card-border: #192A38;
+$color-light-button: #F5F5F5F5;
