--- a/src/app/modules/inicio/components/dashboard/dashboard.component.html
+++ b/src/app/modules/inicio/components/dashboard/dashboard.component.html
@@ -1,1 +1,16 @@
-<p>dashboard works!</p>
+<app-top-cards></app-top-cards>
+
+<div class="row py-4">
+  <div class="col-lg-7">
+    <app-grafico-vendas></app-grafico-vendas>
+  </div>
+  <div class="col-lg-5">
+    <app-feeds></app-feeds>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-12">
+    <app-vendas-card></app-vendas-card>
+  </div>
+</div>
