--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -2,3 +2,4 @@ $color-dark-blue: #102434;
 $color-dark: #050C11;
 $color-dark-card-border: #192A38;
 $color-light-button: #F5F5F5F5;
+$color-light: #F5F5F5;
