--- a/src/app/modules/autenticacao/components/login/login.component.html
+++ b/src/app/modules/autenticacao/components/login/login.component.html
@@ -1,29 +1,34 @@
-<div class="auth-background p-5 h-100 d-flex">
+<div class="p-5 h-100 d-flex">
   <div class="dark-card">
-    <div class="w-100 d-flex pb-5">
+    <div class="w-100 d-flex pb-2" [ngClass]="{'pb-5': !erro}">
       <span class="logo mx-auto">
         <img src="../../../../assets/images/icons/easy-chef-logo.svg" alt="icon" width="45px" height="45px">&nbsp;EasyChef
       </span>
     </div>
-
-    <form>
+    <mat-error *ngIf="erro" class="my-2 w-100 text-center">{{ mensagemErro | translate }}</mat-error>
+    <form [formGroup]="loginForm">
       <mat-form-field appearance="outline" class="w-100 pb-3">
         <mat-label>E-mail</mat-label>
-        <input matInput type="text">
+        <input matInput type="text" id="email" formControlName="email">
         <mat-hint>Não tem uma conta? <a class="light-link" href="#">Crie uma</a></mat-hint>
       </mat-form-field>
       <mat-form-field appearance="outline" class="w-100 pb-3">
         <mat-label>Senha</mat-label>
-        <input matInput [type]="hide ? 'password' : 'text'">
-        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Esconder senha'" [attr.aria-pressed]="hide" style="background-color: transparent; border: none; color: inherit;">
-          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        <input matInput [type]="esconderSenha ? 'password' : 'text'" id="senha" formControlName="senha">
+        <button mat-icon-button matSuffix (click)="esconderSenha = !esconderSenha" style="background-color: transparent; border: none; color: inherit;">
+          <mat-icon>{{esconderSenha ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
         <mat-hint>Esqueceu seu <a class="light-link" href="#">e-mail ou senha</a>?</mat-hint>
       </mat-form-field>
-
-      <div class="w-100 text-center">
-        <button mat-stroked-button class="light-button">Entrar</button>
+      <div class="col">
+        <mat-checkbox id="lembreDeMim" formControlName="lembreDeMim" class="pb-3 auth-check-box">{{ "lembreDeMim" | translate }}</mat-checkbox>
       </div>
     </form>
+
+    <div class="w-100 text-center">
+      <button mat-stroked-button class="light-button" (click)="doLogin()">Entrar</button>
+    </div>
   </div>
 </div>
+
+<mat-progress-spinner *ngIf="loading"	class="spinner"	[mode]="'indeterminate'"></mat-progress-spinner>
