Aplicação de tradução e estrutura dos novos modulos

--- a/src/app/modules/inicio/components/grafico-vendas/grafico-vendas.component.html
+++ b/src/app/modules/inicio/components/grafico-vendas/grafico-vendas.component.html
@@ -2,8 +2,8 @@
     <div class="card-body">
         <div class="d-md-flex align-items-center">
             <div>
-                <h4 class="card-title">Indices de venda</h4>
-                <h5 class="card-subtitle text-muted">Relatório Anual de Vendas</h5>
+                <h4 class="card-title">{{ "indicesDeVendas" | translate }}</h4>
+                <h5 class="card-subtitle text-muted">{{ "relatorioAnualDeVendas" | translate }}</h5>
             </div>
         </div>
         <div class="row mt-3">
