--- a/src/app/modules/inicio/components/vendas-card/vendas-card.component.html
+++ b/src/app/modules/inicio/components/vendas-card/vendas-card.component.html
@@ -1,14 +1,14 @@
 <div class="dark-card">
     <div class="card-body">
-        <h4 class="card-title">Vendas</h4>
-        <h5 class="card-subtitle">Visão geral das vendas</h5>
+        <h4 class="card-title">{{ "vendas" | translate }}</h4>
+        <h5 class="card-subtitle">{{ "visaoGeralDasVendas" | translate }}</h5>
         <div class="table-responsive">
             <table class="table align-middle">
                 <thead>
                     <tr>
-                        <th class="fs-5">Funcionário</th>
-                        <th class="fs-5">Código</th>
-                        <th class="fs-5">Vendas</th>
+                        <th class="fs-5">{{ "funcionario" | translate }}</th>
+                        <th class="fs-5">{{ "codigo" | translate }}</th>
+                        <th class="fs-5">{{ "vendas" | translate }}</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -30,6 +30,5 @@
                 </tbody>
             </table>
         </div>
-    </div>
-    
+    </div>    
 </div>
