--- a/src/app/modules/autenticacao/components/login/login.component.html
+++ b/src/app/modules/autenticacao/components/login/login.component.html
@@ -8,12 +8,12 @@
     <mat-error *ngIf="erro" class="my-2 w-100 text-center">{{ mensagemErro | translate }}</mat-error>
     <form [formGroup]="loginForm">
       <mat-form-field appearance="outline" class="w-100 pb-3">
-        <mat-label>E-mail</mat-label>
+        <mat-label>{{ "email" | translate }}</mat-label>
         <input matInput type="text" id="email" formControlName="email">
-        <mat-hint>Não tem uma conta? <a class="light-link" href="#">Crie uma</a></mat-hint>
+        <mat-hint>{{ "naoTemUmaConta" | translate }}<a class="light-link" href="#">{{ "crieUma" | translate }}</a></mat-hint>
       </mat-form-field>
       <mat-form-field appearance="outline" class="w-100 pb-3">
-        <mat-label>Senha</mat-label>
+        <mat-label>{{ "senha" | translate }}</mat-label>
         <input matInput [type]="esconderSenha ? 'password' : 'text'" id="senha" formControlName="senha">
         <button mat-icon-button matSuffix (click)="esconderSenha = !esconderSenha" style="background-color: transparent; border: none; color: inherit;">
           <mat-icon>{{esconderSenha ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -26,7 +26,7 @@
     </form>
 
     <div class="w-100 text-center">
-      <button mat-stroked-button class="light-button" (click)="doLogin()">Entrar</button>
+      <button mat-stroked-button class="light-button" (click)="doLogin()">{{ "entrar" | translate }}</button>
     </div>
   </div>
 </div>
