--- a/src/app/modules/inicio/components/feeds/feeds.component.html
+++ b/src/app/modules/inicio/components/feeds/feeds.component.html
@@ -1,7 +1,7 @@
 <div class="dark-card h-100">
     <div class="card-body">
-        <h4 class="card-title">Novidades</h4>
-        <h5 class="card-subtitle text-muted">Últimas ações dos usuários</h5>
+        <h4 class="card-title">{{ "novidades" | translate }}</h4> 
+        <h5 class="card-subtitle text-muted">{{ "ultimasAcoesDosUsuarios" | translate }}</h5>
         <div class="feed-widget mt-4">
             <ul class="list-unstyled feed-body m-0">
                 <li class="feed-item d-flex align-items-center mb-3" *ngFor='let feed of feeds'>
