Tela de pedidos - cards

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,5 +1,11 @@
-$color-dark-blue: #102434;
-$color-dark: #050C11;
+$color-header-dark-blue: #09141d;
 $color-dark-card-border: #192A38;
 $color-light-button: #F5F5F5F5;
+
+$color-dark-blue: #102434; 
+$color-dark: #050C11;
 $color-light: #F5F5F5;
+$color-gold: #FCA406;
+$color-blue: #057ADA;
+$color-gray: #635F5F;
+$color-pink: #F43C5C;
