--- a/src/app/modules/pedido/components/pedidos/pedidos.component.html
+++ b/src/app/modules/pedido/components/pedidos/pedidos.component.html
@@ -1,1 +1,78 @@
-<p>pedidos works!</p>
+<div class="main-title pb-3">{{ "pedidos" | translate }}</div>
+<div class="row">
+    <div class="col-xl-3 col-lg-4 col-md-6 col-12 p-2" *ngFor='let pedido of pedidos'>
+        <div class="dark-card">
+            <div class="card-header">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <h3 class="mb-0 font-weight-bold">{{ "pedido" | translate }} {{ pedido.codigo }}</h3>
+                        <small class="text-muted">{{ pedido.data | date: "dd/MM/yyyy HH:mm" }}</small>
+                    </div>
+                    <div>
+                        <span *ngIf="pedido.status == 0" class="badge rounded-pill text-bg-primary">{{ "naoIniciado" | translate }}</span>
+                        <span *ngIf="pedido.status == 1" class="badge rounded-pill text-bg-warning">{{ "emPreparacao" | translate }}</span>
+                        <span *ngIf="pedido.status == 2" class="badge rounded-pill text-bg-success">{{ "entregue" | translate }}</span>
+                        <span *ngIf="pedido.status == 3" class="badge rounded-pill text-bg-danger">{{ "cancelado" | translate }}</span>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="card-body">
+                <div class="card-list">
+                    <div class="p-2" *ngFor="let produto of pedido.produtos">
+                        <div class="d-flex">
+                            <img class="my-auto pe-2" src="{{ produto.imagem ? produto.imagem : '../../../../../assets/images/icons/hamburger.svg'}}" alt="product-image" height="32">
+                            <div class="flex-grow-1">
+                                <div class="font-weight-bold">
+                                    {{ produto.nome }}
+                                </div>
+                                <div class="d-flex justify-content-between">
+                                    <div>R$ {{ produto.valor | number: "1.2-2" }}</div>
+                                    <div>{{ "qtd" | translate }}: {{ produto.quantidade }}</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <small class="text-muted">
+                            {{ pedido.quantidadeItens }}x {{ "itens" | translate }}
+                        </small>
+                        <div class="font-weight-bold">
+                            {{ pedido.valorTotal | number: "1.2-2"}}
+                        </div>
+                    </div>
+                    <button mat-raised-button class="blue-button">
+                        <mat-icon>search</mat-icon> <small>{{ "detalhes" | translate }}</small>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="d-flex justify-content-center w-100">
+    <div class="dark-card paginator d-flex align-items-center">
+        <mat-form-field appearance="legacy" class="pages">
+            <mat-select [(ngModel)]="quantidade">
+              <mat-option [value]="15">15 por página</mat-option>
+              <mat-option [value]="50">50 por página</mat-option>
+              <mat-option [value]="100">100 por página</mat-option>
+            </mat-select>
+          </mat-form-field>
+        <button mat-icon-button matSuffix>
+          <mat-icon>keyboard_arrow_left</mat-icon>
+        </button>
+        <strong class="items">
+            <mat-form-field appearance="legacy">
+                <input matInput [(ngModel)]="pagina">
+            </mat-form-field>
+            de {{ paginas }}
+        </strong>
+        <button mat-icon-button matSuffix>
+          <mat-icon>keyboard_arrow_right</mat-icon>
+        </button>
+    </div>
+</div>
