--- a/src/app/modules/shared/components/default-template/default-template.component.html
+++ b/src/app/modules/shared/components/default-template/default-template.component.html
@@ -8,11 +8,22 @@
       <img src="../../../../assets/images/icons/easy-chef-logo.svg" alt="icon" width="45px" height="45px">&nbsp;Easy Chef
     </span>
     <span class="menu-spacer"></span>
-    <div fxShow="true" fxHide.lt-md>
-      <a href="#" mat-button>Home</a>
-      <a href="#" mat-button>Opção 1</a>
-      <a href="#" mat-button>Opção 2</a>
-      <a href="#" mat-button>Opção 3</a>
+    
+    <div fxShow="true" fxHide.lt-md class="h-100">
+      <div class="d-flex align-items-center h-100">
+        <ng-container *ngFor="let item of headerItens">
+          <li class="dropdown h-100">
+            <a class="nav-link dropdown-toggle h-100 d-flex align-items-center" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <mat-icon>expand_more</mat-icon> {{ item.nome | translate }}
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <ng-container *ngFor="let link of item.links">
+                <a class="dropdown-item" [href]="link.link">{{ link.nome | translate }}</a>
+              </ng-container>
+            </div>
+          </li>
+        </ng-container>
+      </div>
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
@@ -23,10 +34,10 @@
       <button mat-icon-button (click)="sidenav.toggle()">
         <mat-icon>close</mat-icon>
       </button>
-      <a href="#" mat-button>Home</a>
-      <a href="#" mat-button>Opção 1</a>
-      <a href="#" mat-button>Opção 2</a>
-      <a href="#" mat-button>Opção 3</a>
+      <a mat-button>Pedidos</a>
+      <a mat-button>Preparação</a>
+      <a mat-button>Relatórios</a>
+      <a mat-button>Cliente</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="content">
