--- a/src/app/modules/shared/components/default-template/default-template.component.scss
+++ b/src/app/modules/shared/components/default-template/default-template.component.scss
@@ -4,10 +4,6 @@
   flex: 1 1 auto;
 }
 
-.mat-toolbar {
-  background-color: $color-dark-blue;
-}
-
 .mat-drawer-container {
   background-color: transparent;
 }
@@ -19,4 +15,46 @@
 .content {
   padding: 5rem 1rem 1rem;
   height: 100%;
+}
+
+.dropdown {
+  &:hover {
+    .dropdown-menu {
+      display: block;
+    }
+  }
+
+  list-style: none;
+}
+
+.dropdown-item {
+  font: normal normal bold 12px Segoe UI;
+  color: $color-gray;
+
+  &:hover {
+    color: $color-blue;
+    background-color: inherit;
+  }
+}
+
+.dropdown-toggle {
+  &::before {
+    display: inline-block;
+    margin-left: 0;
+    vertical-align: 0;
+    content: "";
+    border: none;
+  }
+
+  &::after {
+    display: inline-block;
+    margin-left: 0;
+    vertical-align: 0;
+    content: "";
+    border: none;
+  }
+}
+
+.horizontal-scroll {
+  overflow-x: scroll;
 }
