--- a/src/app/modules/preparacao/components/preparacao/preparacao.component.scss
+++ b/src/app/modules/preparacao/components/preparacao/preparacao.component.scss
@@ -1,3 +1,5 @@
+@import '/src/assets/styles/variables.scss';
+
 .status-bar {
     border: unset;
     border-top: solid 16px;
@@ -28,22 +30,7 @@
     font-size: 16px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-
-    &.blue {
-       background-color: blue;
-    }
-
-    &.orange {
-       background-color: orange;
-    }
-
-    &.green {
-       background-color: green;
-    }
-
-    &.red {
-       background-color: red;
-    }
+    background-color: $color-dark-blue;
 }
 
 .prepare-background-list {
