--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -2,7 +2,8 @@ $color-header-dark-blue: #09141d;
 $color-dark-card-border: #192A38;
 $color-light-button: #F5F5F5F5;
 
-$color-dark-blue: #102434; 
+$color-dark-blue: #102434;
+$color-dark-blue-checked: #09141d;
 $color-dark: #050C11;
 $color-light: #F5F5F5;
 $color-gold: #FCA406;
