Adequação layout pedidos

--- a/src/app/modules/pedido/components/pedidos-tabela/pedidos-tabela.component.html
+++ b/src/app/modules/pedido/components/pedidos-tabela/pedidos-tabela.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="pedidosDataSource" matSort class="w-100 my-2">
+<table mat-table [dataSource]="pedidosDataSource" matSort class="w-100 mb-2">
     <ng-container matColumnDef="pedido">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
             Pedido
