--- a/src/app/modules/preparacao/components/preparacao/preparacao.component.scss
+++ b/src/app/modules/preparacao/components/preparacao/preparacao.component.scss
@@ -34,7 +34,7 @@
 }
 
 .prepare-background-list {
-    background-color: #00000067;
+    background-color: $color-opacity-background;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
