--- a/src/app/modules/pedido/components/pedidos-card/pedidos-card.component.html
+++ b/src/app/modules/pedido/components/pedidos-card/pedidos-card.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xl-3 col-lg-4 col-md-6 col-12 p-2" *ngFor='let pedido of pedidos'>
+    <div class="col-xl-3 col-lg-4 col-md-6 col-12 px-2 pt-0 pb-2" *ngFor='let pedido of pedidos'>
         <div class="dark-card">
             <div class="card-header">
                 <div class="d-flex justify-content-between">
