--- a/src/app/modules/pedido/components/pedidos/pedidos.component.html
+++ b/src/app/modules/pedido/components/pedidos/pedidos.component.html
@@ -12,29 +12,31 @@
   </div>
 </div>
 
-<app-pedidos-card *ngIf="viewTipo == 0" [pedidos]="pedidos"></app-pedidos-card>
-<app-pedidos-tabela *ngIf="viewTipo == 1"  [pedidos]="pedidos"></app-pedidos-tabela>
-
-<div class="d-flex justify-content-center w-100">
-    <div class="dark-card paginator d-flex align-items-center">
-        <mat-form-field appearance="legacy" class="pages">
-            <mat-select [(ngModel)]="quantidade">
-              <mat-option [value]="15">15 por página</mat-option>
-              <mat-option [value]="50">50 por página</mat-option>
-              <mat-option [value]="100">100 por página</mat-option>
-            </mat-select>
-          </mat-form-field>
-        <button mat-icon-button matSuffix>
-          <mat-icon>keyboard_arrow_left</mat-icon>
-        </button>
-        <strong class="items">
-            <mat-form-field appearance="legacy">
-                <input matInput [(ngModel)]="pagina">
+<div class="opacity-background rounded-1 p-3 mt-2">
+  <app-pedidos-card *ngIf="viewTipo == 0" [pedidos]="pedidos"></app-pedidos-card>
+  <app-pedidos-tabela *ngIf="viewTipo == 1"  [pedidos]="pedidos"></app-pedidos-tabela>
+  
+  <div class="d-flex justify-content-center w-100">
+      <div class="paginator d-flex align-items-center">
+          <mat-form-field appearance="legacy" class="pages">
+              <mat-select [(ngModel)]="quantidade">
+                <mat-option [value]="15">15 por página</mat-option>
+                <mat-option [value]="50">50 por página</mat-option>
+                <mat-option [value]="100">100 por página</mat-option>
+              </mat-select>
             </mat-form-field>
-            de {{ paginas }}
-        </strong>
-        <button mat-icon-button matSuffix>
-          <mat-icon>keyboard_arrow_right</mat-icon>
-        </button>
-    </div>
+          <button mat-icon-button matSuffix>
+            <mat-icon>keyboard_arrow_left</mat-icon>
+          </button>
+          <strong class="items">
+              <mat-form-field appearance="legacy">
+                  <input matInput [(ngModel)]="pagina">
+              </mat-form-field>
+              de {{ paginas }}
+          </strong>
+          <button mat-icon-button matSuffix>
+            <mat-icon>keyboard_arrow_right</mat-icon>
+          </button>
+      </div>
+  </div>
 </div>
