--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,6 +1,7 @@
 $color-header-dark-blue: #09141d;
 $color-dark-card-border: #192A38;
 $color-light-button: #F5F5F5F5;
+$color-opacity-background: #00000067;
 
 $color-dark-blue: #102434;
 $color-dark-blue-checked: #09141d;
