--- a/src/styles.scss
+++ b/src/styles.scss
@@ -181,3 +181,11 @@ mat-button-toggle {
       background-color: $color-dark-blue-checked !important;
   }
 }
+
+.backdrop-blur {
+  backdrop-filter: blur(2px);
+}
+
+.opacity-background {
+  background-color: $color-opacity-background;
+}
